--- a/Source/Graph#.Sample/packages.config
+++ b/Source/Graph#.Sample/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="QuickGraph" version="3.6.61119.7" targetFramework="net40" />
+  <package id="Sandwych.QuickGraph.Core" version="1.0.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="net45" />
   <package id="WPFExtensions" version="1.0.0" targetFramework="net35" />
 </packages>
