--- a/Source/Graph#/packages.config
+++ b/Source/Graph#/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MathNet.Numerics" version="2.6.2" targetFramework="net40-Client" />
-  <package id="QuickGraph" version="3.6.61119.7" targetFramework="net40" />
+  <package id="MathNet.Numerics" version="2.6.2" targetFramework="net461" />
+  <package id="Sandwych.QuickGraph.Core" version="1.0.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="net45" />
 </packages>
